新增重复取消请求案例

--- a/examples/all/index.html
+++ b/examples/all/index.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: your name
+ * @Date: 2022-02-11 09:34:05
+ * @LastEditTime: 2022-02-11 10:16:41
+ * @LastEditors: your name
+ * @Description: 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
+ * @FilePath: \axios\examples\all\index.html
+-->
 <!doctype html>
 <html>
   <head>
@@ -20,7 +28,7 @@
       <ul id="orgs" class="list-unstyled"></ul>
     </div>
 
-    <script src="/axios.min.js"></script>
+    <script src="../../dist/axios.min.js"></script>
     <script>
       axios.all([
         axios.get('https://api.github.com/users/mzabriskie'),
