--- a/examples/get/index.html
+++ b/examples/get/index.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: your name
+ * @Date: 2022-02-11 09:34:05
+ * @LastEditTime: 2022-02-11 09:52:51
+ * @LastEditors: your name
+ * @Description: 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
+ * @FilePath: \axios\examples\get\index.html
+-->
 <!doctype html>
 <html>
   <head>
@@ -8,7 +16,7 @@
     <h1>axios.get</h1>
     <ul id="people" class="list-unstyled"></ul>
 
-    <script src="/axios.min.js"></script>
+    <script src="../../dist/axios.min.js"></script>
     <script>
       axios.get('/get/server')
         .then(function (response) {
